# threedigrid-builder

./: .coveragerc  .devcontainer.json  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CMakeLists.txt  Dockerfile  Dockerfile-dev  Dockerfile.gdal  LICENSE  MANIFEST.in  README.md  README.rst  WHEEL_LICENSE_LINUX  WHEEL_LICENSE_POSIX  WHEEL_LICENSE_WINDOWS  build.cmd  build.sh  docker-compose.devcontainer.yml  docker-compose.override.yml  docker-compose.yml  full_build.sh  py3di.code-workspace  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run_grid.py  script.py  setup.cfg  setup.py  version.inc.in  win_build.bat
.github/workflows/: build_wheels.yml  lint.yml  release.yml  test.yml  test_gdal36  testbank.yml
docker/: Dockerfile  Dockerfile-dev
grid3di/: CMakeLists.txt
grid3di/src/: exception_utils.f90  lines.f90  nodes.f90  nodes1d.f90  quadtree.f90  test.f90  wrapper.f90
integration_tests/: conftest.py  test_bergermeer.py
integration_tests/data/: v2_bergermeer.sqlite
lgpl/: CMakeLists.txt  lgpl.sln  lgpl.vfproj
lgpl/src/: MessageHandling.f90  iso_c_utils.f90
libgrid/src/: c_lines.f90  c_nodes.f90  geo_utils.f90  lines.f90  nodes.f90  nodes2d.f90  quadtree.f90
libthreedigrid/: .f2py_f2cmap  CMakeLists.txt  _fgrid.pyf  array_utils.f90  cells.f90  clone.f90  geo_utils.f90  grid.pyf  log.f90  parameters.f90  quadtree.f90  stdout_unix.inc  stdout_win32.inc  wrapper.pyf
libthreedigrid/src/: array_utils.f90  c_lines.f90  c_nodes.f90  c_quadtree.f90  cells.f90  geo_utils.f90  lines.f90  nodes.f90  parameters.f90  quadtree.f90
py1dgrid/: application.py  domain.py  interface.py
py3di/: py3di.py
py3digrid/: db.py  grid3di.py  models.py  quadtree.pxd  quadtree.pyx  setup.py
py3digrid/py3digrid/: db.py  subgrid.py
pygrid/: py3digrid.ipynb
pygrid/.ipynb_checkpoints/: py3digrid-checkpoint.ipynb  quadtree-checkpoint.pxd  quadtree-checkpoint.pyx
pygrid/grid3di/: db.py  subgrid.py
pygrid/pylibgrid/: lines.pxd  lines.pyx  nodes.pxd  nodes.pyx  quadtree.pyx  setup.py  utils.pxd
sqlite_orm/: demo.py  demo_fiona.py  demo_sqlalchemy.py  demo_sqlalchemy2.py  timings.py
src/: model.f90  simulation.f90  simulation_state.f90  simultation_state.f90
tests/: test_array.py
threedigrid_builder/: __init__.py  application.py  cli.py  constants.py  exceptions.py  geo_utils.py  grid3di.py
threedigrid_builder/base/: __init__.py  array.py  constants.py  endpoints.py  interfaces.py  levees.py  line_halfs.py  lines.py  linestrings.py  nodes.py  pumps.py  quarters.py  settings.py  surfaces.py
threedigrid_builder/base/tests/: test_array.py  test_lines.py
threedigrid_builder/grid/: __init__.py  boundary_conditions.py  channels.py  clones.py  connection_nodes.py  core.py  cross_section_definitions.py  cross_section_locations.py  cross_sections.py  dem_average_area.py  embedded.py  exchange_lines.py  fragments.py  geo_utils.py  grid.py  grid_refinement.py  groundwater.py  initial_waterlevels.py  levees.py  linear.py  lines.py  lines_1d2d.py  nodes.py  obstacles.py  pipes.py  potential_breaches.py  quadtree.py  quadtree2.py  structures.py  windshielding.py  zero_d.py
threedigrid_builder/grid/fgrid/: __init__.py
threedigrid_builder/grid/fwrapper/: __init__.py  cells.pxd  cells.pyx  quadtree.pxd  quadtree.pyx
threedigrid_builder/grid/tests/: test_channels.py  test_connection_nodes.py  test_cross_sections.py  test_geo_utils.py  test_grid.py  test_quadtree.py
threedigrid_builder/grid1d/: __init__.py  channels.py  connection_nodes.py
threedigrid_builder/grid1d/tests/: test_channels.py  test_connection_nodes.py
threedigrid_builder/grid2d/: __init__.py  quadtree.py
threedigrid_builder/interface/: __init__.py  db.py  dict_out.py  geopackage.py  gridadmin.py  gridadmin_out.py  raster_gdal.py  raster_rasterio.py  subgrid.py
threedigrid_builder/interface/tests/: conftest.py  test_db.py  test_gridadmin.py
threedigrid_builder/interface/tests/data/: v2_bergermeer.sqlite
threedigrid_builder/lib/: lines.pxd  lines.pyx  nodes.pxd  nodes.pyx  quadtree.pxd  quadtree.pyx  utils.pyx
threedigrid_builder/tests/: conftest.py  test_array.py  test_boundary_conditions.py  test_channels.py  test_connection_nodes.py  test_cross_section_definitions.py  test_cross_section_locations.py  test_db.py  test_dem_average.py  test_dict_out.py  test_embedded.py  test_endpoints.py  test_exchange_lines.py  test_geo_utils.py  test_grid.py  test_grid_refinements.py  test_gridadmin.py  test_groundwater.py  test_initial_waterlevels.py  test_levees.py  test_line_halfs.py  test_linear.py  test_lines.py  test_lines_1d2d.py  test_linestrings.py  test_nodes.py  test_obstacles.py  test_pipes.py  test_potential_breaches.py  test_pumps.py  test_quadtree.py  test_raster_interfaces.py  test_structures.py  test_windshielding.py  test_zero_d.py
threedigrid_builder/tests/data/: v2_bergermeer.gpkg  v2_bergermeer.sqlite  v2_bergermeer_spatialite4.sqlite
threedigrid_builder/tests/data/clone/: fuerthen.gpkg  fuerthen.sqlite  integration2.gpkg  test1.gpkg  test1.tif
threedigrid_builder/utils/: __init__.py  array_dataset.py
