[build-system]
# numpy required to execute setup.py
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.18",
    "scikit-build",
    "numpy==1.17.3; python_version=='3.8'",
    "numpy==1.19.3; python_version=='3.9'",
    "numpy==1.21.3; python_version=='3.10'",
    "numpy==1.24.2; python_version=='3.11'",
    # do not pin numpy on future versions of python to avoid incompatible numpy and python versions
    "numpy==1.26.*; python_version=='3.12'",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"
