[build-system]
requires = [
    "scikit-build-core",
    "wheel",
    "setuptools",
    "numpy==1.19.3; python_version=='3.9'",
    "numpy==1.21.3; python_version=='3.10'",
    "numpy==1.24.2; python_version=='3.11'",
    "numpy==1.26.*; python_version=='3.12'",
    "numpy==2.3.*; python_version=='3.13'",
]
build-backend = "scikit_build_core.build"

[project]
name = "threedigrid-builder"
version = "1.24.8"
description = "Generate a 3Di simulation grid from a model schematisation"
readme = "README.rst"
requires-python = ">=3.9"
authors = [{ name = "Martijn Siemerink", email = "martijn.siemerink@nelen-schuurmans.nl" }]
license = { text = "GNU General Public License v3.0" }
dependencies = [
    "numpy>=1.15,<3.0",
    "threedi-schema==0.300.*",
    "shapely>=2",
    "pyproj>=3",
    "condenser[geo]>=0.1.1",
    "sqlalchemy>=1.4.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: Other/Proprietary License",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
gridadmin = ["h5py>=2.7"]
gpkg = ["geopandas"]
cli = ["typer"]

[project.urls]
Documentation = "https://docs.3di.lizard.net/"
Repository = "https://github.com/nens/threedigrid-builder"

[project.scripts]
threedigrid-builder = "threedigrid_builder.cli:run"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.18"
