[build-system]
requires = [
    "scikit-build-core",
    "wheel",
    "setuptools",
    "numpy>=2,<3",
]
build-backend = "scikit_build_core.build"

[project]
name = "threedigrid-builder"
dynamic = ["version"]
description = "Generate a 3Di simulation grid from a model schematisation"
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    { name = "Martijn Siemerink", email = "martijn.siemerink@nelen-schuurmans.nl" },
]
license = { text = "GNU General Public License v3.0" }
dependencies = [
    "numpy>=2,<3",
    "threedi-schema==0.302.*",
    "shapely>=2",
    "pyproj>=3",
    "condenser[geo]>=0.1.1",
    "sqlalchemy>=1.4.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: Other/Proprietary License",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
gridadmin = ["h5py>=2.7"]
gpkg = ["geopandas"]
cli = ["typer"]

[project.urls]
Documentation = "https://docs.3di.lizard.net/"
Repository = "https://github.com/nens/threedigrid-builder"

[project.scripts]
threedigrid-builder = "threedigrid_builder.cli:run"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.18"
wheel.exclude = ["threedigrid_builder/tests"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "threedigrid_builder/__init__.py"

[tool.pytest.ini_options]
norecursedirs = [
    ".venv",
    "data",
    "doc",
    "etc",
    "*.egg-info",
    "misc",
    "var",
    "build",
    "lib",
    "include",
]
python_files = ["test_*.py"]
testpaths = ["threedigrid_builder"]
filterwarnings = ["error:::numpy"]

[tool.zest-releaser]
release = false
python-file-with-version = "threedigrid_builder/__init__.py"